Add insert question via file API (2)
- Progress 2/4 (PDF file type): Validate syntax in file content